--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -205,18 +205,17 @@ header {
 
 #playlistbanner {
   width: 100%;
-  height: 220px;
+  min-height: 220px;
   z-index: 0;
   position: relative;
   overflow: hidden;
   margin-bottom: 1em;
-  /*height: 220px;*/
   background-image: url("/Content/img/playlistheader.jpg");
   background-repeat: no-repeat;
   background-position-y: 25%;
   background-size: cover; }
   #playlistbanner .content {
-    padding: 2.2% 5em 3em 5em;
+    padding: 2.2% 5em 0 5em;
     margin: 0 auto;
     max-width: 1500px;
     color: white;
@@ -244,6 +243,8 @@ header {
       float: left;
       margin-right: 30px;
       background-color: rgba(0, 0, 0, 0.6); }
+    #playlistbanner .content .borderround {
+      margin-bottom: 1em; }
     #playlistbanner .content h2 {
       margin-top: 0;
       margin-bottom: 0.4em;
@@ -793,7 +794,7 @@ footer {
   position: relative; }
   #footerSlideContent #fullscreenbutton {
     color: white;
-    right: 0;
+    right: 4px;
     top: 1.2em;
     position: absolute;
     cursor: pointer; }
@@ -809,6 +810,29 @@ footer {
     margin-top: 1em;
     background-size: contain;
     background-image: url("/Content/img/default_cover.png"); }
+
+.menu {
+  clear: both;
+  font-size: .65em;
+  margin-top: .5em;
+  margin-bottom: -4px;
+  -moz-box-shadow: inset 0 -40px 40px -40px #000000;
+  -webkit-box-shadow: inset 0 -40px 40px -40px #000000;
+  box-shadow: inset 0 -40px 40px -40px #000000; }
+  .menu .item {
+    display: inline-block;
+    padding: .9em 2em .5em 2em; }
+    .menu .item a {
+      text-decoration: none;
+      color: white; }
+  .menu .item.selected {
+    background: white; }
+    .menu .item.selected > a {
+      color: black;
+      text-shadow: none !important; }
+    .menu .item.selected > a > h1 {
+      color: black !important;
+      text-shadow: none !important; }
 
 #comments ul {
   padding-left: 0; }
