--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -268,22 +268,23 @@ header {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.55); }
+    background-color: rgba(0, 0, 0, 0.55);
+}
+
 #playlistbanner {
     width: 100%;
-    height: 220px;
+    min-height: 220px;
     z-index: 0;
     position: relative;
     overflow: hidden;
     margin-bottom: 1em;
-    /*height: 220px;*/
     background-image: url('/Content/img/playlistheader.jpg');
     background-repeat: no-repeat;
     background-position-y: 25%;
     background-size: cover;
 
     .content {
-        padding: 2.2% $sidemargin 3em $sidemargin;
+        padding: 2.2% $sidemargin 0 $sidemargin;
         margin: 0 auto;
         max-width: $maxpagewidth;
         color: white;
@@ -322,6 +323,10 @@ header {
             float: left;
             margin-right: 30px;
             background-color: rgba(0,0,0,0.6);
+        }
+
+        .borderround{
+            margin-bottom: 1em;
         }
 
         h2 {
@@ -1058,7 +1063,7 @@ footer {
 
     #fullscreenbutton {
         color: white;
-        right: 0;
+        right: 4px;
         top: 1.2em;
         position: absolute;
         cursor: pointer;
@@ -1078,6 +1083,40 @@ footer {
         margin-top: 1em;
         background-size: contain;
         background-image: url('/Content/img/default_cover.png');
+    }
+}
+
+.menu{
+    clear: both;
+    font-size: .65em;
+    margin-top: .5em;
+    margin-bottom: -4px;
+    -moz-box-shadow: inset 0 -40px 40px -40px #000000;
+    -webkit-box-shadow: inset 0 -40px 40px -40px #000000;
+    box-shadow: inset 0 -40px 40px -40px #000000;
+
+    .item{
+        display: inline-block;
+        padding: .9em 2em .5em 2em;
+
+        a{
+            text-decoration: none;
+            color: white;
+        }
+    }
+
+    .item.selected{
+        background: white;
+
+        & > a{
+            color: black;
+            text-shadow: none !important;
+        }
+
+        & > a > h1{
+            color: black !important;
+            text-shadow: none !important;
+        }
     }
 }
 
