Implemented sharing a playlist with Facebook and Twitter

--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -877,3 +877,6 @@ footer {
   align-items: center;
   padding: 20px; }
 
+.twitter-share-button[style] {
+  vertical-align: text-bottom !important; }
+
