--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -1170,3 +1170,5 @@ footer {
     align-items: center;
     padding: 20px;
     }
+
+.twitter-share-button[style] { vertical-align: text-bottom !important; }
