--- a/UI-MVC/Views/Shared/_Layout.cshtml
+++ b/UI-MVC/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="https://teamd.azurewebsites.net/Content/img/logo_header.png" />
     <title>@ViewBag.Title - BeatBuddy</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
