kleine dingen fixen

--- a/UI-MVC/Views/Home/Portal.cshtml
+++ b/UI-MVC/Views/Home/Portal.cshtml
@@ -49,10 +49,10 @@
 <section>
     <div class="title">
         <h1>My Organisations</h1>
-        <div id="organisationCount" style="display: inline">@ViewBag.MyOrganisations.Count</div>
+        <div id="organisationCount" style="display: inline;">@ViewBag.MyOrganisations.Count</div>
         <ul class="menu btn-right">
             <li>
-                <a href="#"><i class="material-icons" style="color: black">apps</i></a>
+                <a href="" style="text-decoration: none"><i class="material-icons">apps</i></a>
                 <ul>
                     <li style="cursor: pointer"><a href="#myModal">Create organisation</a></li>
                     <li style="cursor: pointer"><a href="#searchOrganisationbtn">Search organisation</a></li>
