--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -802,7 +802,9 @@
 
         function updatePlaylist() {
             if (gridView) {
-                $('#playlist-view').load('/Playlist/GetPlaylistGrid/', { id: @ViewBag.PlaylistId });
+                $('#playlist-view').load('/Playlist/GetPlaylistGrid/', { id: @ViewBag.PlaylistId }, function() {
+                    $.getScript("../../Scripts/gridview.js");
+                });
             } else {
                 $('#playlist-view').load('/Playlist/GetPlaylist/', { id: @ViewBag.PlaylistId });
             }
@@ -992,36 +994,7 @@
     </script>
 <script src="../../Scripts/modernizr.js"></script>
 <script>
-        $(function () {
-
-            var $container = $('#ib-container'),
-                $articles = $container.children('article'),
-                timeout;
-
-            $articles.on('mouseenter', function (event) {
-
-                var $article = $(this);
-                clearTimeout(timeout);
-                timeout = setTimeout(function () {
-
-                    if ($article.hasClass('active')) return false;
-
-                    $articles.not($article.removeClass('blur').addClass('active'))
-                             .removeClass('active')
-                             .addClass('blur');
-
-                }, 65);
-
-            });
-
-            $container.on('mouseleave', function (event) {
-
-                clearTimeout(timeout);
-                $articles.removeClass('active blur');
-
-            });
-
-        });
+       
     function changeColor(element, color) {
         document.getElementById(element).style.color = color;
     }
