--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -50,7 +50,27 @@
       flex: 0 1 40px; }
     #chatContainer #chatContent #discussion {
       list-style: none;
-      padding-left: 0; }
+      padding-left: 0;
+      padding-right: 2em; }
+      #chatContainer #chatContent #discussion .chatMessage {
+        display: block;
+        clear: both;
+        overflow: hidden;
+        margin-bottom: .8em; }
+        #chatContainer #chatContent #discussion .chatMessage img {
+          width: 50px;
+          height: 50px;
+          float: left;
+          margin-right: 1em; }
+        #chatContainer #chatContent #discussion .chatMessage .chatUser {
+          margin-left: 1em;
+          font-weight: 500;
+          display: block; }
+        #chatContainer #chatContent #discussion .chatMessage .chatText {
+          margin-left: 1em;
+          display: block;
+          font-weight: 300;
+          display: table; }
 
 * {
   font-family: 'Roboto', sans-serif; }
