--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -71,8 +71,38 @@ body {
 
         #discussion{
             list-style: none;
-            padding-left: 0
+            padding-left: 0;
+            padding-right: 2em;
+
+            .chatMessage{
+                display: block;
+                clear: both;
+                overflow: hidden;
+                margin-bottom: .8em;
+
+                img{
+                    width: 50px;
+                    height: 50px;
+                    float: left;
+                    margin-right: 1em;
+                }
+
+                .chatUser{
+                    margin-left: 1em;
+                    font-weight: 500;
+                    display: block;
+                }
+
+                .chatText{
+                    margin-left: 1em;
+                    display: block;
+                    font-weight: 300;
+                    display: table;
+                }
+            }
         }
+
+        
     }
 }
 
