--- a/UI-MVC/Content/Portal.css
+++ b/UI-MVC/Content/Portal.css
@@ -22,7 +22,7 @@ h3 {
   background-position: center center;
   margin-bottom: 2em; }
   .loggedin-banner .banner-content {
-    padding: 10% 5em 1em 5em;
+    padding: 1em 5em 1em 5em;
     margin: 0 auto;
     max-width: 1500px;
     margin: 0 auto;
