--- a/UI-MVC/Content/Portal.scss
+++ b/UI-MVC/Content/Portal.scss
@@ -31,7 +31,7 @@ h3
 
     .banner-content
     {
-        padding: 10% 5em 1em 5em;
+        padding: 1em 5em 1em 5em;
         margin: 0 auto;
         max-width: 1500px;
         margin: 0 auto;
