--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
         $('#findPlaylist').click(function () {
             $('#indexBannerContent').hide();
             $('#banner').addClass('content');
-            $('#banner').append('<div class="content" style="text-align:center"><h1>Enter the keycode</h1></br><input type="text" id="keyField" class="custom-input" style="width:247px"/></div>');
+            $('#banner').append('<div class="content" style="text-align:center"><h1>Enter the key</h1></br><input type="text" id="keyField" class="custom-input" style="width:247px"></div>');
             $("#keyField").keypress(function (e) {
                 if (e.which == 13) {
                     var key = $('#keyField').val();
