--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
                 }
                 )
                 .fail(function () {
-                    alert("error");
+                    notie.alert(3, "Key does not exist!", 2.5);
                 });
                 }
             });
