--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -1239,3 +1239,9 @@ footer {
     }
 
 .twitter-share-button[style] { vertical-align: text-bottom !important; }
+
+.image-form {
+                width: 150px;
+                height: 150px;
+                cursor: pointer;
+            }
