Remove playlist also removes comments + delete playlist checks if you created the playlist + remove organisation also removes playlists and comments created by organisation + delete organisation checks if you are organiser or coorganiser

--- a/UI-MVC/Views/Account/Register.cshtml
+++ b/UI-MVC/Views/Account/Register.cshtml
@@ -115,19 +115,7 @@
     </div>
     <div class="row"></div>
         @section scripts {
-            @Scripts.Render("~/bundles/jqueryval")
+            @Scripts.Render("~/bundles/jqueryval");
+            @Scripts.Render("~/Scripts/profilepicture.js")
         }
-        <script>
-            document.getElementById('profile_click').onclick = function () {
-                document.getElementById('profileImage').click();
-            };
-            document.getElementById("profileImage").onchange = function () {
-                var reader = new FileReader();
-
-                reader.onload = function (e) {
-                    document.getElementById("profile_click").src = e.target.result;
-                };
-
-                reader.readAsDataURL(this.files[0]);
-            };
-        </script>
+      
