Krijg ik een prijs voor de kleinste commit ooit? :simple_smile:

--- a/UI-MVC/Views/Home/Index.cshtml
+++ b/UI-MVC/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
     </div>
 }
 
-<p id="intro" class="more-margin-bottom">Beatbuddy is a collaborative music platform, that will allow you to create playlists with your friends family and more!</p>
+<p id="intro" class="more-margin-bottom">Beatbuddy is a collaborative music platform, that will allow you to create playlists with your friends, family and more!</p>
 
 <div class="row">
     <div class="col-md-4 intro-item">
