--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -255,7 +255,7 @@
                     </li>
                     counter++;
                 }
-                if (tracks.Count() == 0)
+                if (tracks.Any())
                 {
                     <li><span class="tracktitle">No tracks coming up next... Add some yourself!</span></li>
             }
