added join button on home + portal

--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -1041,6 +1041,16 @@ header {
     margin-top: 1em;
 }
 
+.btn-join {
+    height:40px;
+    width:100px;
+    margin-top:1px;
+    margin-left:10px;
+    
+    color: white;
+    vertical-align: top;
+}
+
 .min-margin-top {
     margin-top: -15px;
 }
