--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -771,6 +771,14 @@ header {
   height: 3em;
   margin-top: 1em; }
 
+.btn-join {
+  height: 40px;
+  width: 100px;
+  margin-top: 1px;
+  margin-left: 10px;
+  color: white;
+  vertical-align: top; }
+
 .min-margin-top {
   margin-top: -15px; }
 
