--- a/UI-MVC/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/UI-MVC/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -5,7 +5,7 @@
 <hr style="width: 80%" />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Any()) {
+    if (loginProviders.Count() == 0) {
         <div>
             <p>
                 There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
